--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,10 +6,10 @@
 		      <%= render 'shared/error_messages' %>
     <%= form_for(@user) do |f| %>
       
-      <%= f.label :first %>
+      <%= f.label 'First Name' %>
       <%= f.text_field :first %>
 
-      <%= f.label :last %>
+      <%= f.label 'Last Name' %>
       <%= f.text_field :last %>
 
       <%= f.label :email %>
