Finish admin to be able to edit users

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,9 @@
     <li>
       <%= gravatar_for user %>
       <%= link_to user.first+' '+user.last, user %>
+      <% if current_user.admin? %>
+	| <%= link_to 'edit', edit_user_path(user) %>
+      <%end %>
       <% if current_user.admin? && !current_user?(user) %>
       | <%= link_to "delete", user, method: :delete,
            data: { confirm: "You sure?" } %>
