--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,5 +11,11 @@
     </section>
   </aside>
 </div>
-<%= link_to 'Edit', edit_user_path(@user) %> |
+    <% if current_user.admin? || current_user?(@user) %>
+	<%= link_to 'Edit', edit_user_path(@user) %> |
+<%end %>
+    <% if current_user.admin? && !current_user?(@user) %>
+      <%= link_to "Delete", user_path(@user), method: :delete,
+           data: { confirm: "You sure?" } %> |
+    <% end %>
 <%= link_to 'Back', users_path %>
