--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,17 +1,23 @@
 <div class="center hero-unit">
-  <h1>Welcome to My Dic </h1>
-
+  <h1>Welcome to Twixionary </h1>
+  <p>
   <h2>
-    This is the home page for the
-    <a href="http://panpearson.hackathon.io/teams/view/727">Compuglobalhypermeganet</a>
-    sample application.
+    Metamorphosize into a sagacious collegian.
+	<p>
+    <p>by <a href="http://panpearson.hackathon.io/teams/view/727">Compuglobalhypermeganet</a></p>
+    
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
-  <h3>
-    Our application is built with Ruby on Rails:
-  </h3> 
-  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<div class="left-hero-unit">
+	<h2>
+		Twixionary allows students of all species to look up, play with, and store words that they find.
+		<p></p>
+		<p></p>
+		<p> Honestly, no one wants to look up "obfuscate" twice.</p>
+	</h2>
+</div>
+	
 
