--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -4,8 +4,9 @@
 				     <%= image_tag feed_item.image.url, :class=>"imagefeed" %>
 				       <% end %>
   <span class="user">
-    <%= link_to feed_item.user.first + ' ' + feed_item.user.last, feed_item.user %> learned
+    <%= link_to feed_item.user.first + ' ' + feed_item.user.last, feed_item.user %> 
   </span>
+  <span class="content"><i><%= feed_item.example_sentence %></i></span>
   <span class="content"><b><%= link_to feed_item.word, feed_item %></b> means '<%= feed_item.definition %>'</span>
   <span class="timestamp">
 	 during <%= feed_item.context %> <%= time_ago_in_words(feed_item.created_at) %> ago.
