Trying to get drawing tool working on heroku

--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -54,7 +54,7 @@ function saveToTemporaryFile()
 	  <input type="button" value="Show Drawing Tool" onclick="zwibbler.show()">
 	  <input type="button" value="Save Image" onclick="saveToTemporaryFile()">
 	  <br />
-    <script src="//zwibbler.com/component.js#width=700&height=500" type="text/javascript"></script>
+    <script src="http://zwibbler.com/component.js#width=700&height=500" type="text/javascript"></script>
     <%= f.hidden_field(:imageurl) %>
   </div>
   <div class="actions">
