Changes to About and help pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -23,19 +23,28 @@
 	Come back soon! We'll be updating regularly, and new features are on the way.  
 </p>
 </div>
-<h2> Get Started </h2>
+ <p align="left"><h1>Get Started </h1></p>
 <div class="left-hero-unit">
-	<h2>
+	
 		<p>
-		Sign in or create an account, and you will be able to add words to your own
-		personal dictionary. Select definitions you need from Pearson's highly acclaimed Longman Dictionary. 
+		Sign in or create an account. 
+		<p>
+		<p>Click the Twixionary icon at the top. 
+			<p>
+		<p>You will see a feed of all the words your friends have entered.
+			<p>
+		<p>By clicking "add new word" you will be able to add words to your own
+		personal dictionary. 
+		<p>
+		<p>Select definitions you need from Pearson's highly acclaimed Longman Dictionary. 
 		Tell us where you found the word, practice using it in a sentence,
 		and while your at it, draw and save a picture. We find that intransitive verbs 
 		make the best art.
-		<p></p>
+		<p>
+		<p>Now when you view your own profile, you will see all the words that you have entered.
 		<p></p>
 		</p>
-	</h2>
+	
 </div>
 </body>
 
