--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, 'Help') %>
 <h1>Help</h1>
 <p>
-  Need help? Contact us!
+  Need help? Don't we all. See the About section for some information on how to get started.
+<p> 
+	<p>For technical concerns, contact our developers at <a href="http://panpearson.hackathon.io/teams/view/727">Compuglobalhypermeganet</a>.
 </p>
 
